# c2hunter

./: .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  SPEC.md  TASKS.md  docker-compose.yml
analysis/: pyproject.toml
analysis/src/c2hunter_analysis/: __init__.py  detectors.py  domain.py  ingestion.py  payload_features.py  pcap.py  scoring.py
analysis/tests/: test_detectors_integration.py  test_domain_scoring.py  test_generated_scenario_analysis.py  test_payload_features.py  test_pcap_ingestion.py
controller/: pyproject.toml
controller/src/c2hunter_controller/: __init__.py  app.py  config.py  flow_review.py  healthcheck.py  jobs.py  logging.py  pcap.py  production.py  queueing.py  repositories.py  retention.py  schemas.py  storage.py
controller/tests/: conftest.py  test_analysis_history_pcap_api.py  test_analysis_job_api.py  test_durable_pipeline.py  test_human_guided_detection_api.py  test_operational_sensor_api.py  test_production.py  test_resources_storage.py  test_sensor_gateway_api.py  test_storage_integration.py  test_web_api_contract.py
docs/: architecture.md  data-model.md  deployment.md  detection-logic.md  human-guided-detection-plan.md  human-guided-detection.md  operations.md  security.md
proto/: sensor.proto
scripts/: build-sensor-tarball.sh  controller.Dockerfile  install-sensor.sh  sensor.Dockerfile  worker.Dockerfile
sensor/: go.mod  go.sum
testdata/: README.md
web/: Dockerfile  eslint.config.js  index.html  nginx-main.conf  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  (+2 more)
(+75 files in other folders)
