[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "c2hunter-controller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "prometheus-client==0.22.1",
  "psycopg[binary]==3.2.9",
  "redis==5.2.1",
  "minio==7.2.15",
  "structlog==25.4.0",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.17.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.4",
]

[tool.pytest.ini_options]
testpaths = ["tests", "../analysis/tests"]
pythonpath = ["src", "../analysis/src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "../analysis/src"]
packages = ["c2hunter_controller", "c2hunter_analysis"]
